--- a/src/style2.css
+++ b/src/style2.css
@@ -66,11 +66,11 @@ nav ul li :hover {
   padding: 14px 65px;
   border: none;
   outline: none;
-  color: #fff;
+  color: white;
   cursor: pointer;
   border-radius: 15px;
   margin-top: 50px;
-  background-color: #fa8072;
+  background-color: rgb(187, 37, 37);
 }
 
 cta :hover {
