--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul li :hover {
   cursor: pointer;
   border-radius: 15px;
   margin-top: 50px;
-  background-color: #fa8072;
+  background-color: red;
 }
 
 cta :hover {
@@ -80,7 +80,7 @@ cta :hover {
 .header_main_content img {
   margin-left: -120px;
   margin-top: -10px;
-  width: 700px;
+  width: 900px;
   height: 500px;
 }
 
